[imad-console] Updates ui/new.css

--- a/ui/new.css
+++ b/ui/new.css
@@ -49,10 +49,9 @@
 
 #form
 {
-    height:450px;
+    height:300px;
     width:1353px;
     background:grey;
-    position:absolute
-;
+    position:relative;
 }
 
